# pcaudiolib

./: .gitignore  CMakeLists.txt  config.cmake.h.in
src/: xaudio2.cpp
src/include/pcaudiolib/: audio.h
